--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -13,6 +13,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+body {
+  background-color: white;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
